--- a/HelloGithub/aaa/res/values/strings.xml
+++ b/HelloGithub/aaa/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">aaa</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hola mundo</string>
     <string name="action_settings">Settings</string>
 
 </resources>
