--- a/HelloGithub/aaa/res/values/strings.xml
+++ b/HelloGithub/aaa/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">aaa</string>
+    <string name="app_name">blaaa</string>
     <string name="hello_world">Hola mundo</string>
     <string name="action_settings">Settings</string>
 
